--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -42,6 +42,7 @@ $breakpoint-sm: 576px;
 $breakpoint-md: 768px; 
 $breakpoint-lg: 992px;  
 $breakpoint-xl: 1200px; 
+$mobile-breakpoint: 768px;
 
 // Sidebar Width
 $sidebar-width: 180px;
